K8S/appdep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    labels:
        app: frontend
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
            - image:  docker.io/espirado/app-oneacre:appv2
              imagePullPolicy: IfNotPresent
              name: frontend
