K8S/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-test-service
spec:
  selector:
    app: flask-test-app
  ports:
    - protocol: "TCP"
      port: 6000
      targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-test-app
spec:
  selector:
    matchLabels:
      app: flask-test-app
  replicas: 3
  template:
    metadata:
      labels:
        app: flask-test-app
    spec:
      containers:
        - name: flask-test-app
          image: docker.io/espirado/app-oneacre:appv2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
